[gd_scene load_steps=2 format=3 uid="uid://c2xvgo54w0mqy"]

[ext_resource type="Script" path="res://scripts/multiplayer_join.gd" id="1_join_script"]

[node name="MultiplayerJoin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_join_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 150.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.91, 0.91, 0.91, 1)
theme_override_font_sizes/font_size = 48
text = "JOIN GAME"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "Enter the lobby code to join"
horizontal_alignment = 1

[node name="JoinContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="CodeLabel" type="Label" parent="JoinContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "LOBBY CODE:"
horizontal_alignment = 1

[node name="CodeInput" type="LineEdit" parent="JoinContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter 6-digit code"
alignment = 1
max_length = 6
caret_blink = true

[node name="StatusLabel" type="Label" parent="JoinContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
visible = false

[node name="ButtonContainer" type="HBoxContainer" parent="JoinContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="JoinContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "BACK"

[node name="JoinButton" type="Button" parent="JoinContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "JOIN"
disabled = true

[connection signal="text_changed" from="JoinContainer/CodeInput" to="." method="_on_code_input_text_changed"]
[connection signal="pressed" from="JoinContainer/ButtonContainer/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="JoinContainer/ButtonContainer/JoinButton" to="." method="_on_join_pressed"] 